--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -76,7 +76,7 @@ on:
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
   schedule:
-   - cron: 8 18/3 * * *
+   - cron: 8 18 */3 * *
 
 env:
   GIT_REPOSITORY: ${{github.repository}}
