--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -34,16 +34,28 @@ jobs:
 
     steps:
     - name: 释放Ubuntu磁盘空间
-      uses: danshui-git/free-disk-space@main
+      uses: jlumbroso/free-disk-space@main
       with:
-        remove_android: true
-        remove_dotnet: true
-        remove_haskell: true
-        remove_tool_cache: true
-        remove_swap: true
-        remove_docker_image: true
-        remove_packages: "azure-cli google-cloud-cli microsoft-edge-stable google-chrome-stable firefox postgresql* temurin-* *llvm* mysql* dotnet-sdk-*"
-        remove_folders: "/usr/share/swift /usr/share/miniconda /usr/share/az* /usr/share/glade* /usr/local/lib/node_modules /usr/local/share/chromium /usr/local/share/powershell"
+        # this might remove tools that are actually needed,
+        # if set to "true" but frees about 6 GB
+        tool-cache: true
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        swap-storage: true
+      # uses: danshui-git/free-disk-space@main
+      # with:
+      #   remove_android: true
+      #   remove_dotnet: true
+      #   remove_haskell: true
+      #   remove_tool_cache: true
+      #   remove_swap: true
+      #   remove_docker_image: true
+      #   remove_packages: "azure-cli google-cloud-cli microsoft-edge-stable google-chrome-stable firefox postgresql* temurin-* *llvm* mysql* dotnet-sdk-*"
+      #   remove_folders: "/usr/share/swift /usr/share/miniconda /usr/share/az* /usr/share/glade* /usr/local/lib/node_modules /usr/local/share/chromium /usr/local/share/powershell"
         
     - name: 准备结束
       uses: actions/checkout@v4
